--- a/mkdocs - Copy.yml
+++ b/mkdocs - Copy.yml
@@ -1,12 +1,12 @@
-site_name: Pawleys Logic Docs
-
+site_name: Pawleys Logic* Heraeus Electro-Nite Downloads and Documentation
 theme:
   name: material
+  palette:
+    primary: blue
+    accent: light blue
 
 nav:
   - Home: index.md
-  - About: about.md
-  - Instruments:
-      - CasTemp: instruments/castemp.md
-      - CTW5 AOI User Guide: instruments/HEN_CTWE5Parser_CLX34_UserGuide.md
+  - CasTmp Wireless E5 (CTWE5):
+      - CTWE5 Add-On User Guide : instruments/HEN_CTWE5Parser_CLX34_UserGuide.md
 
