--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,33 @@
 site_name: Pawleys Logic* Heraeus Electro-Nite Downloads and Documentation
+site_url: https://pawleyslogic.com
 theme:
   name: material
   palette:
-    primary: blue
-    accent: light blue
+    - scheme: default  # light mode
+      primary: deep orange  # or custom below
+      accent: orange
+
+
 
 nav:
   - Home: index.md
   - CasTmp Wireless E5 (CTWE5):
       - CTWE5 Add-On User Guide : instruments/HEN_CTWE5Parser_CLX34_UserGuide.md
+  - Downloads :
+      - CastTemp Wireless :
+         - CTW ControlLogix/CompactLogix Add-On Instruction v34 : downloads/ctw/CTWReadAssembler_CLX34_AOI.zip
+         - CTW ControlLogix/CompactLogix Add-On Instruction v32 : downloads/ctw/CTWReadAssembler_CLX32_AOI.zip
+      - CastTemp Wireless E5 :
+         - CTWE5 Add-On User Guide : downloads/ctw5/HEN_CTWE5Parser_CLX34_UserGuide.pdf         
+      - EDS Files :         
+         - Anybus CompactCom M40 EDS File : downloads/eds/m40/005A002B00370100.zip
+         - Anybus CompactCom M30 EDS File : downloads/eds/m30/005A0000002E0100.zip
+      
+      
+features:
+  - navigation.tabs
+
+    
+extra:
+  include_cname: true
 
