--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,8 @@ theme:
 
 nav:
   - Home: index.md
+  - SensorLab Steel (SLS):
+      - SLS ProfiNet Output Register User Guide : instruments/sls/sls_output_register_pnet_cfg_guide.md
   - CasTmp Wireless E5 (CTWE5):
       - CTWE5 Add-On User Guide : instruments/HEN_CTWE5Parser_CLX34_UserGuide.md
   - Downloads : downloads/Downloads.md
