Rename down_loads.md to index.md for clean downloads URL

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,7 @@ nav:
       - SLS ProfiNet Output Register User Guide : instruments/sls/sls_output_register_pnet_cfg_guide.md
   - CasTmp Wireless E5 (CTWE5):
       - CTWE5 Add-On User Guide : instruments/HEN_CTWE5Parser_CLX34_UserGuide.md
-  - Downloads : downloads/down_loads.md
+  - Downloads : downloads/index.md
 
 
 
